--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Sarabun', sans-serif;
   margin: 0;
   color: #003366;
-  background: url('background.jpg') center/cover no-repeat fixed;
+  background: url('KW Center-377.jpg') center/cover no-repeat fixed;
 }
 
 header {
